<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="223dp"
        android:layout_height="28dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/MySmartDevise"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.37"
        app:srcCompat="@drawable/baseline_browser_updated_24"
        android:contentDescription="TODO" />

    <View
        android:id="@+id/view2"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/radius"
        android:contentDescription="@string/MySmartDevise"
        android:onClick="OnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view5"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view6"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="268dp"
        android:background="@drawable/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/baseline_location_on_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/baseline_local_fire_department_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="32dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/baseline_access_time_filled_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6"
        app:srcCompat="@drawable/baseline_restart_alt_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:layout_marginEnd="40dp"
        android:text="@string/distance"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginEnd="40dp"
        android:text="@string/kkal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="61dp"
        android:layout_height="24dp"
        android:layout_marginEnd="40dp"
        android:textSize="16sp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_marginEnd="40dp"
        android:text="@string/steps"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <View
        android:id="@+id/view7"
        android:layout_width="167dp"
        android:layout_height="165dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view8"
        android:layout_width="167dp"
        android:layout_height="165dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:srcCompat="@drawable/baseline_running_with_errors_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/kg"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="123dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:srcCompat="@drawable/graph1" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:srcCompat="@drawable/baseline_favorite_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bmp"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="138dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:srcCompat="@drawable/graph2" />

</androidx.constraintlayout.widget.ConstraintLayout>
